--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,13 @@ android {
         }
     }
 }
+repositories {
+    jcenter()
+}
 
+dependencies {
+    compile 'com.github.olegosipenko:pttextview:1.0.0'
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
