--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,10 @@
         <activity
             android:name=".rules"
             android:label="@string/title_activity_rules"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".winner_list"
+            android:label="@string/title_activity_winner_list"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
