--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ allprojects {
 
 
 dependencies {
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
     compile 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.github.olegosipenko:pttextview:1.0.0'
