--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,14 @@
             android:name=".winner_list"
             android:label="@string/title_activity_winner_list"
             android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity
+            android:name=".gallery"
+            android:label="Gallery"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
+
+
     </application>
 
 </manifest>
