--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,7 @@ allprojects {
 
 dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile 'com.facebook.fresco:fresco:0.9.0+'
-    compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.+'
+    compile 'com.facebook.fresco:fresco:0.9.0'
 
     compile 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
